{
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "Player",
            "id": "fe9e0a6a-dc95-4a94-bd21-d55405efdbb4",
            "actions": [
                {
                    "name": "PlayAPitch",
                    "type": "Button",
                    "id": "3c6061aa-7124-4870-b5f2-61a614602ec5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayBPitch",
                    "type": "Button",
                    "id": "4bb93bea-7645-45aa-8000-1b58ed235a11",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayCPitch",
                    "type": "Button",
                    "id": "caa35b81-b03d-466e-b53a-f88856a4f2dd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayDPitch",
                    "type": "Button",
                    "id": "547106b7-5921-4301-986e-371eaba07677",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayEPitch",
                    "type": "Button",
                    "id": "2ec703a0-78fd-4dd0-9d9f-66daea69e8fe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayFPitch",
                    "type": "Button",
                    "id": "e465ab62-4a3e-4588-bbea-dda668191f87",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayGPitch",
                    "type": "Button",
                    "id": "52c39aa0-5aba-485f-8bbd-e9323d6c1172",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f4ac4775-0d04-4cbd-a53e-d5e3b4a938d3",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayAPitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a1d0f12e-c1d3-429f-8b74-1706bf132576",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayBPitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8be8c671-06ff-4f28-addf-7dd1ab2964c2",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayCPitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eb4f8644-5a68-481c-916c-205ab7db429f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayDPitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a2861076-607a-4254-ba98-a3ecdfc8cac0",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayEPitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3ca67adc-d1cc-4f0f-9206-c42779f74683",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayFPitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d000c3b-44b6-4462-9ea4-20223db334b6",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayGPitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}